src/index.css
/* ... */
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 800;
  font-display: swap;
  src: url('./fonts/Inter-ExtraBoldItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-ExtraBoldItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 900;
  font-display: swap;
  src: url('./fonts/Inter-Black.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Black.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 900;
  font-display: swap;
  src: url('./fonts/Inter-BlackItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-BlackItalic.woff?v=3.19') format('woff');
}

/* -------------------------------------------------------
Variable font.
Usage:

  html { font-family: 'Inter', sans-serif; }
  @supports (font-variation-settings: normal) {
    html { font-family: 'Inter var', sans-serif; }
  }
*/
@font-face {
  font-family: 'Inter var';
  font-weight: 100 900;
  font-display: swap;
  font-style: normal;
  font-named-instance: 'Regular';
  src: url('./fonts/Inter-roman.var.woff2?v=3.19') format('woff2');
}
@font-face {
  font-family: 'Inter var';
  font-weight: 100 900;
  font-display: swap;
  font-style: italic;
  font-named-instance: 'Italic';
  src: url('./fonts/Inter-italic.var.woff2?v=3.19') format('woff2');
}

:root {
  --bs-font-sans-serif: 'Inter', sans-serif;
  --bs-code-color: #444;
}

@supports (font-variation-settings: normal) {
  :root {
    --bs-font-sans-serif: 'Inter var', sans-serif;
  }
}

html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body,
#root .app {
  min-height: 100vh;
}

#root .app {
  display: flex;
  flex-direction: column;
}

#mainNav {
  z-index: 1050;
}

#mainNav,
.navbar-offcanvas.offcanvas-header {
  height: 76px;
}

#mainNavToggle {
  --line-thickness: 2px;
  --transition-easing: ease-in-out;
  --transition-duration: 0.25s;
  --button-width: 40px;
  --button-height: 40px;
  --button-padding: 7px;
  --icon-size: 1.5rem;

  display: flex;
  align-items: center;
  justify-content: center;
  flex: 0 0 var(--button-width);
  height: var(--button-height);
  border: 0;
  padding: var(--button-padding);
  box-shadow: none;
  color: inherit;
}

#mainNavToggle span {
  position: relative;
  display: inline-block;
  width: calc(var(--button-width) - var(--button-padding) * 2);
  height: calc(var(--button-height) - (var(--button-padding) * 2) - (var(--line-thickness) * 4));
  border-top: var(--line-thickness) solid;
  border-bottom: var(--line-thickness) solid;
  border-color: currentColor !important;
  font-size: 0;
  transition: all var(--transition-duration) var(--transition-easing);
}

#mainNavToggle span:before,
#mainNavToggle span:after {
  position: absolute;
  display: block;
  content: '';
  width: 100%;
  height: var(--line-thickness);
  top: 50%;
  left: 50%;
  background: currentColor;
  transform: translate(-50%, -50%);
  transition: transform var(--transition-duration) var(--transition-easing);
}

#mainNavToggle:not(.collapsed) span {
  border-color: transparent !important;
}

#mainNavToggle:not(.collapsed) span:before {
  transform: translate(-50%, -50%) rotate(45deg);
}

#mainNavToggle:not(.collapsed) span:after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

main {
  flex: 1;
}

.slashed-zeroes {
  font-family: Inter;
  font-weight: 400;
  font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
  -moz-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
  -ms-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
  -webkit-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
  -o-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
}

.break-word {
  word-break: break-word;
}

.unstyled {
  text-decoration: none !important;
  color: inherit !important;
}

.text-small {
  font-size: 0.875rem;
}

.cursor-pointer {
  cursor: pointer;
}

/* Fullscreen Overlays */
.offcanvas-fullscreen {
  width: 100vw !important;
  height: 100vh !important;
  z-index: 1100 !important;
}

.offcanvas-fullscreen .offcanvas-header {
  border-bottom: 1px solid var(--bs-body-bg);
  box-shadow: 0px 1px 5px var(--bs-gray-400);
  z-index: 1200;
}

@media only screen and (min-width: 768px) {
  .offcanvas-fullscreen .offcanvas-header {
    min-height: 75px;
    max-height: 75px;
  }
}

:root[data-theme='dark'] .offcanvas-fullscreen .offcanvas-header {
  box-shadow: 0px 1px 5px var(--bs-gray-900);
}

.offcanvas-fullscreen .offcanvas-header button:hover {
  color: inherit;
}

.offcanvas-fullscreen .offcanvas-body {
  background-color: var(--bs-gray-100);
  padding: 0;
}

:root[data-theme='dark'] .offcanvas-fullscreen .offcanvas-body {
  background-color: var(--bs-gray-800);
}

/* Table Styles */
table.striped tr:nth-child(2n) td {
  background-color: var(--bs-gray-100);
}
:root[data-theme='dark'] table.striped tr:nth-child(2n) td {
  background-color: var(--bs-gray-800);
}

table.striped tr:hover td {
  background-color: var(--bs-gray-200) !important;
}
:root[data-theme='dark'] table.striped tr:hover td {
  background-color: var(--bs-gray-700) !important;
}

/* Navbar Styles */
#mainNav .nav-link {
  font-weight: 600 !important;
}

.center-nav-link > div {
  position: relative;
}

.flex-1 {
  flex-grow: 1;
  flex-shrink: 0;
  flex-basis: 0 !important;
}
/* ... */

